# esp32-4runner-canbus

./: .gitignore  4runner_can_decoder_verified.h  AGENTS.md  CMakeLists.txt  README.md  capture_can.sh  clean_all_logs.sh  sanitize_logs.sh  sdkconfig.defaults
.github/workflows/: unit-tests.yml
analysis/: CAN_ANALYSIS_REPORT.md  QUICK_REFERENCE.md  README.md  RPM_TEST_GUIDE.md  bin_to_csv.py  can_0001_summary.csv  can_analyzer.py  correlation_analyzer.py.bak  dbc_decode.py  diagnostic_correlation.py  rpm_analyzer.py  simple_analyzer.py  turning_test_analyzer.py  wheel_speed_analyzer.py
components/button_bsp/: button_bsp.c  button_bsp.h
components/can_logger/: CMakeLists.txt
docs/: 4RUNNER_CAN_ANALYSIS_SUMMARY.md  BINARY_LOGGING.md  README.md  REVERSE_ENGINEERING_NOTES.md  SCRIPTS_USAGE.md  TPMS_DECODING_NOTES.md  WIFI_WEBSOCKET_IMPLEMENTATION.md
main/: 4runner_canbus_main.c  4runner_canbus_main.cpp  CMakeLists.txt  app_state.cpp  app_state.h  idf_component.yml  page_utils.cpp  page_utils.h  settings_store.cpp  settings_store.h  twai_network_example_listen_only_main.c
main/pages/: diag_page.cpp  diag_page.h  fourrunner_page.cpp  fourrunner_page.h  logging_page.cpp  logging_page.h  orientation_page.cpp  orientation_page.h  rpm_page.cpp  rpm_page.h  rtc_page.cpp  rtc_page.h  wheel_speed_page.cpp  wheel_speed_page.h
scripts/: analyze_log.sh  calibrate_tpms.py  can_decoder.py  convert_csv_to_bin.py  decode_can.py  decode_with_obdb.py  find_rear_tpms.py  find_tpms.py  investigate_tpms.py  quick_probe.py  validate_can.py
test/: CMakeLists.txt  run_tests.sh  test_can_signal.c
(+16 files in other folders)
